@@ -19,7 +19,7 @@ func init() {
 	// Packed Files
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJzsV0uTo7oV3udnzDqVy6PdCanKwtAXAfbQ17hbEtohyQ3YEqbG2BhS+e8pCYMfPXNTk1Q2qSy63AXSeX7nfB9//3KoN+yXj1Js6CZr/tRJ8eWvX6j0G/K2zxMpDgRFIsWrRWqZu9fSlRk6i1TCgs/rgknev5YuDUvTD8s2D6tY8AC2SykOdD0TVPolBXD3GyIFDWKhzzyerRJBsXtIcSKWEh5TFB0IWjlE+gdmvZdLb14u34dfivxjirigCB65N2uolYjfcN4w4G+zzpQUQMG98BB6YZOs1W/UpGhWEAs2BM2MW/s8iEyyjrgn4xOVpCY27PS7t31O7KhN27rj6CxYv18s125NZS1SO/nI0GxHcP7slfM89Fxjg13xWroHavHey/dNCMQxk3DLfafnQSRSZH6wIDqlFuyZ5XSv+T4PvXlOrdlHajlHIs91aq+e1T1mwY77TkGqRLDLOR6IVsVEgVOxVsciNkHSpSg2sHWumYoJqxp+HWNqU5zsX0t3l+KkYJZjMhkL1g729Nm3fZ6hWctx0o950P76jNlJR5DfXPw1KZ4/2q5p5Zo8iMccRztTzZSv0DPy1HLaDXQKCs4fHDgfFIiev4zvr75vfObTO+AcsaX7c8hQbLyW7pFaTjv4Gv4ILrYEu4bGYRUbTMKC4q8aLxla6V+CZkUqz4JobEQtk86W4LindtSHwniM1aCmc8hwbIy9GmIRBkHGcxi4HbViwez4xKqv/24eNa1iwarkI5VQUjsSXv5Tvf1R/WsOYPNauo/P7/o74NQs2NiHwC04yAcMBtAYY2cVPJDJ97wJdWyzngLfIG93PRzj0vNw2x+K/JYB2N3VUj1XeO4HXN+eDz1XcKnm29G7Zpgttri9GwJo6Xm2Y4MAcdT5gqSmDz4IJoJWqxMHcatiS+35D+zAHXvZ5xwl7UMsyveJAGebWbBTM0Wt+BvB4YOd84l0TkdQUjPT6SlwbJXXa+kOz9rPuS/teMas84lozIhe12HAgMrbIDj64NI/cAT7sXbMggeCYoPa4adeZRac3dfftVJ0Nu/6p+K8nF+u72u2XLsmCebTLKiaXe8lp9Rqpp20XN/npWxtcKz75JVGTqQ4cAA7bKu9D6/7IIgFBXDLgdNdMXyZIdCIjdq946zOL/vvoQbLtWuwCooBw/GJBbtxNiSTTvPJbpCc7nnrtsbheLcn6r2dqJm+qRepKYAlQb5xfeaYPHBNPp/i+Uaw6FVOZFXbGYAKj2GK40jNIutysTGbq39vNs4u/1jv8qhM8zXw+zfFuThuUxSLhcdPHCctx6tq6c0rgs4Fs5M6tWOR4mibeewQenzoQccOKrbIagoimyLq2jxSuLJjI8XxPup2iy9/HGhebppvJfsO0b8haDApthdi31KkCMkUPIjq1LoIABzpgUXdRK49wYnJVELAOE6NezFlis49Wd8R8XjWIMhs9QL5VwJBmgWVfkWQqYb4SJGzI2/m0xK7RWodGqJ84dXvCYSrfZx0HL2XeFVvqTWTGeIm0+/en0PAOwa+Lhhweu47ajEbKTofBsAZOUWOReBlGU0LZlx4yqez06TXzXZ6qO1E0PVsRlFbTsskSJRYEvxlr/I6kUAv1iPxHDU4iliOG2QeljKpmTXEHOY/JUAagpMuQ/F/V4RccPJ/IfI/LUSaEMAnHkSFwpuuk+9oYXFd5A+CwZ7yXdzH+PB8WMbTgv4uWZiOneFkj+1IEAs+TSLlQhAai6sLIcr359B/Oi46Z8J/NP9dsvxPCXbaKT8k2UDvGp2bEj+TbeAb2csnvH/Cqao7rWL9QYRtXnNQfDAJK4KL9g4HYw+CZMbA+23/OzWruMx/eX856/3wW/n0bbH+XKPBjvKRP4decivemjCIxIUfbm2PJPtJ6HHwF8UZw25bTeTYpKgR2PI7Jv3Zd3E88owdC34Xl8bKFDOZanaJbdjL3wgeBcD8tk8391ZTbZmEDbWJwJbG0m1e2k4Ipg/En7iTFBz42o/quZ7d8RwgHbWMT1i61OqOX9Vdpj9QzYlnSBWd6M3evRcQdzOlPoZNCuBl/5OaBolg28/C6xZrd3avgmYUH9M5VVOmxJF8X3gV3xP09Bz+WhTMUD00+4UH/4ysu3yOEy+aprNYz2U0iKJXlR+zFYe/7yPrIqYGQSMo8HsOxJZZsGBSiZdWxVAxCXcZ/qrFUGb5MrN+1f/rjwhbcUteLVb7v335xx/+GQAA//+LKLK5")
+	unpacked := packer.MustUnpack("eJzsV1tzq7rZvv9+Rq6/6QYR0tKZdWHI5mSHLONEErqzJAewJczE2Bg6/e8dCRsfstbu3u30ptOLjB2Q3uPzvs/jvz3s6hX75aMUK7paNn/qpHj46wOVfkPetnkqxY6gWGR4Ps2AuXktXblER5FJWPBJXTDJ+9fSpVFp+lHZ5lGVCB7CdibFji5sQaVf0gBuviNS0DAR+sz92SoVFLu7DKdiJuE+Q/GOoLlDpL9j4L2ceZNy9j58UuTvM8QFRXDPPbuhIBXfcd6wwF8vO1PSAAruRbvIi5p0oT7jJkN2QQBsCLKNa/s8jE2yiLknkwOVpCYW7PS7t21OrLjN2rrj6ChYv53OFm5NZS0yK/1YIntDcP7klZM88lxjhV3xWro7Cnjv5dsmCsR+KeGa+07Pw1hkyPxgYXzIAOwZcLrXfJtH3iSnwP7IgLMn8lhn1vxJ3WMAdtx3ClKlgp3O8VC0KiYaOBVrdSxiFaZdhhIDg2PNVExY1fDlHFOb4XT7WrqbDKcFA47JZCJYO9jTZ9+2+RLZLcdpf86D9pdnzEo7gvzm5K/J8OTedk0r1+Rhcs7xbGesmfIVeUaeAaddQaegwfGDB84HDUTPn8/vL76vfObju8DZY6D7s1uixHgt3T0FTjv4Gv4ILtYEu4bGYZUYTMKC4heNlyWa60+C7CKTR0E0NuKWSWdNcNJTK+4jYdzHalDT2S1xYpx7NcQiDIKMpyh0OwoSwazkwKqXfzWPmlaJYFX6kUkoqRULL/9Dvf1Z/WsewOa1dO+f3/R3wKlZsHMfQrfgQT5gMITGOXZWwR0ZfU+aSMdm9zTwDfJ208NzXHoervtDkd+yAHY3tVTPFZ77AdfX5yPPFVyq+Xb0rhlmi02v70YBBHqercQggdjrfIO0pnc+CCaCVvMDD5JWxZZZk5/YgRv2vM05Stu7WJTvAwmc9RLATs0UBcknwdGdneOBdE5HUFoz0+lp4Fgqr9fSHZ61X3OfWYnNwPFANGZEr+swYEDlbRAcf3Dp7ziC/bl2DMAdQYlBrehLr5YA2rf1d0GGjuZN/1Scp/OzxW3NZgvXJOFknAVVs8u99JCBZtxJs8VtXsrWCidXfTJy1r+M36mEBpHHA7+c3/IwbZdVcrjyf3jpMzPDcLPE88tM4tpkEg6YCAozu5xf08AxSUAOHNkbVm3GOwQ4BwKOgoWwZBYsL3k0BZFNMeCf1DRMBRPOXZ3cniiOs9IDW3/Zk58Eb56iYOSR0/wofoM3e0/zy1z3c00t1z73kFTx4Wf7l1zxrVca+n9+NTuX/scjJk54OXHypZYcpy2/qqPCB1M5yfcpB4Wg622+CPx+MeyXbYwbeuV/f44PY6OOvExGvxYFM+yCItgrviWLvKIWNBQG467NYwB3GU6MJUp6gvwuA3k18yYVk6qfL9VMx8Y/M0Q+swXbRR7XnMkDv196rPbyb98e/n+QI3LVfJbsB4LkDUGDSbE+CZA1RYo4TcHDuM7ASajgWC8W1I0ioCc4NZln1zQw9iMZPJsyQ8eeLG4Ew/msQZDZ6kX3z4SMNAsq/YogUy2bPUXOhryZjzPsFhnYNUT5wvPfEjIX+zjtOHov8bxeU2DLJeIm0+/en6KAdyx4mbLA6bnvKAIxMnTcDUAwcoocQOBpaY6L8LyYlU9no8m5szd6+VipoAvbpqgtx6UXpkrUCf68VXkdSKgJYE88Rw24IsD9Cpm7mUxrBoaYo/wPCaWG4LRTIPmPiqUTTv4nmP6rBVMTBfCRh3Gh8Kbr5DtaAI31vBc21pjv9DbGu+dherj07OVmGWPrtOxNx1ridIutWBAAH0cxFTRi9bYdsDg/LW75/hT5j/tp54z4jye/Ser/rhAYd8pPxUCod43OTYm00XbgG8vnL3j/glNVd1ol+ocbtnjNg+KDSVgRXLQ3ODj3IExtFrxf979Ts4rL/Jf356PeD9/Lx8/p4muNBjvKR/4Ueem1yGyiMBYnfri2LZl0mh8JUh78RXHGsNvmI2E2GWoEBn7HpG//EMdnnrESwW/i0lgZYyZjzU6xDXtZC4frOE59urp3IWsmYUMtIjDQWLrO68cC5HfdSQtFtuQkLvTsns8FpKPA+IKlU61u+FXdZfqHtCnuRQ295mfFt6f5ua4TBalJA9jfiLD1eV4TQQO45oHTXWPtxu7vFDlexbcEPT4NwkX10OynHvwzAjf57EdeNE1nupjIuHSjDCevKj9mKQ5/38bAMXnomtzTwkXQwO95INYMwILJZBt3rYrhIna8SbUEvlyCX/V3/WPHUtySV9P59tvD3//vHwEAAP//eU7rOQ==")
 	SupportedMap = make(map[string]bool)
 
 	for f, v := range unpacked {
