@@ -37,3 +37,4 @@
 - Expose stream.* variables in events {pull}17468[17468]
 - Monitoring configuration reloadable {pull}17855[17855]
 - Pack ECS metadata to request payload send to fleet {pull}17894[17894]
+- Enable Filebeat input: S3, Azureeventhub, cloudfoundry, httpjson, netflow, o365audit. {pull}17909[17909]
